# fastapi-todos

./: .gitignore  Justfile  README.md  docker-compose.yml
backend/: .coveragerc  .env.example  .env.test  Dockerfile  Justfile  alembic.ini  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: auth.py  tasks.py
backend/app/core/: config.py  constants.py  exceptions.py
backend/app/db/: __init__.py  base_dao.py  session.py  task_dao.py  user_dao.py
backend/app/models/: __init__.py  base.py  task.py  user.py
backend/app/schemas/: __init__.py  auth.py  healthcheck.py  task.py  user.py
backend/app/services/: __init__.py  auth.py  exceptions.py  task.py  user.py
backend/app/utils/: __init__.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: e0e85684eb19_add_users_and_tasks_tables.py
backend/tests/: conftest.py
backend/tests/integration/: auth_test.py  conftest.py  health_test.py  tasks_test.py
backend/tests/unit/: security_test.py
docker/nginx/: nginx.dev.conf
docs/: idea.md
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: Header.vue  TaskForm.vue  TaskItem.vue  TaskList.vue
frontend/src/config/: api.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  tasks.ts
frontend/src/types/: Auth.ts  Task.ts  User.ts
frontend/src/views/: Home.vue  HomeView.vue  LoginView.vue  NotFoundView.vue  SignupView.vue  TasksView.vue
